// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton computed usecase-0__disabled-false_selectedValue-none infoText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-false_selectedValue-none labelText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-false_selectedValue-none states 1`] = `
Object {
  "checked": false,
  "disabled": false,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed usecase-0__disabled-false_selectedValue-something infoText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-false_selectedValue-something labelText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-false_selectedValue-something states 1`] = `
Object {
  "checked": true,
  "disabled": false,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed usecase-0__disabled-true_selectedValue-none infoText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-true_selectedValue-none labelText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-true_selectedValue-none states 1`] = `
Object {
  "checked": false,
  "disabled": true,
  "error": false,
  "focused": false,
  "warning": false,
}
`;

exports[`RadioButton computed usecase-0__disabled-true_selectedValue-something infoText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-true_selectedValue-something labelText 1`] = `""`;

exports[`RadioButton computed usecase-0__disabled-true_selectedValue-something states 1`] = `
Object {
  "checked": true,
  "disabled": true,
  "error": false,
  "focused": false,
  "warning": false,
}
`;
